--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 django==3.1
-djangorestframework==3.9.1
+djangorestframework==3.12.2
 psycopg2-binary==2.8.3
 celery==5.0.1
 uWSGI==2.0.18
+django-cors-headers==3.5.0
+django-debug-toolbar==3.1.1
+django-filter==2.4.0
+Pillow==8.1.0
+gunicorn==20.0.4
+drf-yasg==1.20.0
