--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+env.txt/
 
 # Spyder project settings
 .spyderproject
@@ -134,4 +135,5 @@ project/local_setting.py
 entrypoint.sh
 docker-compose.yml
 postgres-data/
+geoserver-data/
 /static/
