--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -11,4 +11,7 @@ services:
     ports:
       - "8000:8000"
 
-# For db config read README.md/## Postgresql
+    external_links:        # For running services from external services
+      - "psql-naxa:db"
+      - "geoserver-naxa:geoserver"
+
