--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,7 +13,7 @@ services:
       - ./logs/:/logs/
     command: sh entrypoint.sh
     env_file:
-      - env.txt
+      - .env
     depends_on:
       - db
     networks:
