build: added postgresql environment to env files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Environments
+.env_pg
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -101,15 +111,6 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -135,3 +136,11 @@ entrypoint.sh
 docker-compose.yml
 postgres-data/
 /static/
+static
+logs
+logs/
+sock/
+media/
+media
+frontend_app/
+dist/
