--- a/Dockerfile_sample
+++ b/Dockerfile_sample
@@ -4,12 +4,15 @@ RUN mkdir /code
 WORKDIR /code
 
 COPY apt_requirements.txt /code/
-RUN apt-get update && cat apt_requirements.txt | xargs apt -y install
+RUN apt-get update && cat apt_requirements.txt | xargs apt -y --no-install-recommends install \
+	&& rm -rf /var/lib/apt/lists/* \
+	&& apt autoremove \
+	&& apt autoclean
 
 ENV CPLUS_INCLUDE_PATH=/usr/include/gdal
 ENV C_INCLUDE_PATH=/usr/include/gdal
 
 COPY requirements.txt /code/
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 ENTRYPOINT /code/entrypoint.sh
