--- a/requirements_nongis.txt
+++ b/requirements_nongis.txt
@@ -21,6 +21,7 @@ django-filter==2.4.0
 djangorestframework==3.12.2
 drf-yasg==1.20.0
 gunicorn==20.0.4
+GDAL==2.4.0
 idna==2.10
 importlib-metadata==4.3.1
 inflection==0.5.1
