--- a/requirements_gis.txt
+++ b/requirements_gis.txt
@@ -15,6 +15,8 @@ coreapi==2.3.3
 coreschema==0.0.4
 cycler==0.10.0
 Django==3.1
+dj-rest-auth==2.1.4
+django-allauth==0.42.0
 django-cors-headers==3.5.0
 django-debug-toolbar==3.1.1
 django-filter==2.4.0
