--- a/requirements_nongis.txt
+++ b/requirements_nongis.txt
@@ -1,60 +1,69 @@
-amqp==5.0.6
-asgiref==3.2.10
+amqp==5.1.1
+asgiref==3.5.2
+async-timeout==4.0.2
 attrs==21.2.0
 billiard==3.6.4.0
 cached-property==1.5.2
-celery==5.0.1
-certifi==2020.12.5
-chardet==4.0.0
-click==7.1.2
-click-didyoumean==0.0.3
+celery==5.2.7
+certifi==2022.6.15
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.1.3
+click-didyoumean==0.3.0
 click-plugins==1.1.1
-click-repl==0.1.6
-cligj==0.7.2
+click-repl==0.2.0
 coreapi==2.3.3
 coreschema==0.0.4
-cycler==0.10.0
-Django==3.1
-dj-rest-auth==2.1.4
-django-allauth==0.42.0
-django-cors-headers==3.5.0
-django-debug-toolbar==3.1.1
-django-filter==2.4.0
-djangorestframework==3.12.2
+cryptography==37.0.2
+cycler==0.11.0
+defusedxml==0.7.1
+Deprecated==1.2.13
+dj-rest-auth==2.2.4
+Django==4.0
+django-allauth==0.51.0
+django-cors-headers==3.13.0
+django-debug-toolbar==3.4.0
+django-filter==22.1
+djangorestframework==3.13.1
 drf-yasg==1.20.0
+fonttools==4.33.3
 gunicorn==20.0.4
 GDAL==2.4.0
-idna==2.10
+idna==3.3
 importlib-metadata==4.3.1
 inflection==0.5.1
 itypes==1.2.0
-Jinja2==3.0.1
-kiwisolver==1.3.1
-kombu==5.1.0
-MarkupSafe==2.0.1
-matplotlib==3.3.4
+Jinja2==3.1.2
+kiwisolver==1.4.3
+kombu==5.2.4
+MarkupSafe==2.1.1
+matplotlib==3.5.2
 munch==2.5.0
-numpy==1.19.5
-packaging==20.9
-pandas==1.1.5
-Pillow==8.1.0
-prompt-toolkit==3.0.18
-psycopg2-binary==2.8.3
-Pygments==2.9.0
-pyparsing==2.4.7
-pyproj==3.0.1
-python-dateutil==2.8.1
-pytz==2021.1
-requests==2.25.1
-ruamel.yaml==0.17.4
-ruamel.yaml.clib==0.2.2
+numpy==1.22.4
+oauthlib==3.2.0
+packaging==21.3
+pandas==1.4.2
+Pillow==9.1.1
+prompt-toolkit==3.0.29
+psycopg2-binary==2.9.3
+pycparser==2.21
+PyJWT==2.4.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python3-openid==3.2.0
+pytz==2022.1
+redis==4.3.3
+requests==2.28.0
+requests-oauthlib==1.3.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 six==1.16.0
-sqlparse==0.4.1
+sqlparse==0.4.2
 typing-extensions==3.10.0.0
-uritemplate==3.0.1
-urllib3==1.26.5
+uritemplate==4.1.1
+urllib3==1.26.9
 uWSGI==2.0.18
 vine==5.0.0
 wcwidth==0.2.5
+wrapt==1.14.1
 zipp==3.4.1
-redis==3.5.3
