--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -11,7 +11,14 @@ services:
       - .:/code
     ports:
       - "8000:8000"
+    command: sh entrypoint.sh
 
-    external_links:        # For running services from external services
-      - "psql-naxa:db"
-      - "geoserver-naxa:geoserver"
+  db:
+    image: mdillon/postgis:11-alpine
+    restart: always
+    volumes:
+      - ./postgres_data:/var/lib/postgresql/data/
+    # ports:
+    #   - 5432:5432
+    env_file:
+      - pg_env.txt
