--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,9 +2,10 @@ version: "3"
 
 services:
   web:
-    image: project:0.0.1 # needs 'docker build -t project:0.0.1 .' first
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: always
-    container_name: web
     ports:
       - 8000:8000
     volumes:
@@ -20,7 +21,9 @@ services:
       - django_nw
 
   worker:
-    image: project:0.0.1
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: always
     container_name: worker
     command: "celery -A project worker -f /logs/worker.log -l DEBUG"
@@ -35,7 +38,6 @@ services:
 
   nginx:
     image: nginx:latest
-    container_name: nginx
     restart: always
     ports:
       - 80:80
@@ -54,12 +56,11 @@ services:
 
   db:
     image: mdillon/postgis:11-alpine
-    container_name: db
     restart: always
     volumes:
       - ./postgres_data:/var/lib/postgresql/data/
-    ports:
-      - 5432:5432
+    # ports:
+    #   - 5432:5432
     env_file:
       - pg_env.txt
     networks:
@@ -68,10 +69,9 @@ services:
   redis:
     image: redis:alpine
     restart: always
-    container_name: redis
     command: redis-server --appendonly yes
-    ports:
-      - 6379:6379
+    # ports:
+    #   - 6379:6379
     volumes:
       - ./_redis_data:/var/lib/redis
       - ./redis/rc.local:/etc/rc.local
