--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,24 +7,24 @@ services:
       dockerfile: Dockerfile.prod
     restart: always
     ports:
-      - 8000:8000
+      - ${WEB_APP_PORT}:8000
     volumes:
       - ./sock/:/sock/
       - ./:/code
       - ./logs/:/logs/
     entrypoint: sh /code/docker-entrypoint.prod.sh
     env_file:
-      - env.txt
+      - .env
     depends_on:
       - db
     networks:
-      - django_nw
-    healthcheck:
-      interval: 1m
-      timeout: 5s
-      retries: 5
-      test:
-        curl http://localhost:8000 || bash -c 'kill -s 15 -1 && (sleep 10; kill -s 9 -1)' #written in a manner that if healthcheck fails every process is killed and container restarts
+      - ${PROJECT_NAME}_nw
+    # healthcheck:
+    #   interval: 1m
+    #   timeout: 5s
+    #   retries: 5
+    #   test:
+    #     curl http://localhost:8000 || bash -c 'kill -s 15 -1 && (sleep 10; kill -s 9 -1)' #written in a manner that if healthcheck fails every process is killed and container restarts
       # start_period: 30s
     deploy:
       resources:
@@ -40,9 +40,9 @@ services:
     # ports:
     #   - 5432:5432
     env_file:
-      - pg_env.txt
+      - .pg_env
     networks:
-      - django_nw
+      - ${PROJECT_NAME}_nw
     deploy:
       resources:
         limits:
@@ -59,7 +59,7 @@ services:
       - ./_redis_data:/var/lib/redis
       - ./redis/rc.local:/etc/rc.local
     networks:
-      - django_nw
+      - ${PROJECT_NAME}_nw
     deploy:
       resources:
         limits:
@@ -79,9 +79,9 @@ services:
     volumes:
       - ./logs/:/logs/
     env_file:
-      - env.txt
+      - .env
     networks:
-      - django_nw
+      - ${PROJECT_NAME}_nw
     deploy:
       resources:
         limits:
@@ -91,9 +91,9 @@ services:
   nginx:
     image: nginx:latest
     restart: always
-    ports:
-      - 80:80
-      - 443:443
+    # ports:
+    #   - 80:80
+    #   - 443:443
     volumes:
       - ./nginx/nginx-proxy.conf:/etc/nginx/conf.d/default.conf   # Change nginx/nginx-proxy-sample.conf to nginx-proxy.conf
       - ./frontend_app/dist:/var/www/frontend
@@ -104,7 +104,7 @@ services:
       - web
       - worker
     networks:
-      - django_nw
+      - ${PROJECT_NAME}_nw
     deploy:
       resources:
         limits:
@@ -112,5 +112,5 @@ services:
           memory: "200M"
 
 networks:
-  django_nw:
+  ${PROJECT_NAME}_nw:
     driver: bridge
