--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -71,12 +71,12 @@ services:
       context: .
       dockerfile: Dockerfile
     restart: always
-    container_name: worker
     entrypoint: "celery -A project worker -f /logs/worker.log -l DEBUG"
     depends_on:
       - web
       - redis
     volumes:
+      - .:/code
       - ./logs/:/logs/
     env_file:
       - .env
@@ -88,28 +88,50 @@ services:
           cpus: "0.3"
           memory: "250M"
 
-  nginx:
-    image: nginx:latest
+  beat:
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: always
-    # ports:
-    #   - 80:80
-    #   - 443:443
-    volumes:
-      - ./nginx/nginx-proxy.conf:/etc/nginx/conf.d/default.conf   # Change nginx/nginx-proxy-sample.conf to nginx-proxy.conf
-      - ./frontend_app/dist:/var/www/frontend
-      - ./sock/:/sock/
-      - ./logs/nginx:/var/log/nginx
-      - ./static:/static
+    entrypoint: "celery -A project beat -f /logs/worker.log -l DEBUG"
     depends_on:
       - web
-      - worker
+      - redis
+    volumes:
+      - .:/code
+      - ./logs/:/logs/
+    env_file:
+      - .env
     networks:
       - ${PROJECT_NAME}_nw
     deploy:
       resources:
         limits:
-          cpus: "0.2"
-          memory: "200M"
+          cpus: "0.3"
+          memory: "250M"
+
+  # nginx:
+  #   image: nginx:latest
+  #   restart: always
+  #   # ports:
+  #   #   - 80:80
+  #   #   - 443:443
+  #   volumes:
+  #     - ./nginx/nginx-proxy.conf:/etc/nginx/conf.d/default.conf   # Change nginx/nginx-proxy-sample.conf to nginx-proxy.conf
+  #     - ./frontend_app/dist:/var/www/frontend
+  #     - ./sock/:/sock/
+  #     - ./logs/nginx:/var/log/nginx
+  #     - ./static:/static
+  #   depends_on:
+  #     - web
+  #     - worker
+  #   networks:
+  #     - ${PROJECT_NAME}_nw
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         cpus: "0.2"
+  #         memory: "200M"
 
 networks:
   ${PROJECT_NAME}_nw:
