fix: use slim package on final image Dockerfile.prod

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,4 @@
-FROM naxa/python:3.9-slim-v1 as Builder
+FROM naxa/python:3.9-slim-v1 as builder
 # Uses naxa/python:3.9-slim-v1 instead of python:3.9-slim so that
 # apt/requirement doesn't have to reinstall everytime
 WORKDIR /code
@@ -23,9 +23,17 @@ RUN pip install setuptools==57.5.0
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /code/wheels -r requirements.txt
 
 ###FINAL IMAGE
-FROM naxa/python:3.9-slim-v1
+FROM python:3.9-slim
+
+ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWEITEBYTECODE 1
+
+RUN mkdir -p /code
+RUN mkdir -p /logs
+RUN mkdir -p /sock
 
 WORKDIR /code
+
 COPY apt_requirements.txt /code/
 RUN apt-get -y update
 RUN cat apt_requirements.txt | xargs apt -y --no-install-recommends install \
