fix: refactored directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -36,10 +36,13 @@ media
 frontend_app/
 dist/
 redis-data/
+_redis_data/
+redis/
 
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
+__pycache__
 *.py[cod]
 *$py.class
 
